force-app/main/default/objects/cgcloud__Order_Template__c/cgcloud__Order_Template__c.object-meta.xml
<CustomObject>
    <description>Template which controls the behaviour of a sales document.</description>
    <label>Order Template</label>
    <nameField>
        <label>Order Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>