force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Add_Former_Items__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Add_Former_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The template setting controls whether items, which belong to a former sales document of the same business partner and of the same sales document template, are to be added to the disposal list. The system considers only sales documents which have reached a status of status type = &apos;Ready&apos; within the last number of days specified in SdoMeta.ConsiderMaxHistoryDays.</description>
    <label>Add Former Items</label>
    <type>Checkbox</type>
</CustomField>