force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Add_Items_Json__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Add_Items_Json__c</fullName>
    <description>Enter the custom JSON that’s used to display the fields from Product and Order related objects.</description>
    <label>Custom JSON for Add Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>