force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Allow_Competitor_Products__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allow_Competitor_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether foreign products can be used in the sales document or not.</description>
    <label>Allow Competitor Products</label>
    <type>Checkbox</type>
</CustomField>