force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Allow_Header_Discount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allow_Header_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Header Discount  allows discount at Order header when checked. The discount percentage or amount is evaluated from valid Account Specific conditions for a specified quantity of Order Item  associated with the order</description>
    <inlineHelpText>Allow Header Discount  allows discount at Order header when checked. The discount percentage or amount is evaluated from valid Account Specific conditions for a specified quantity of Order Item  associated with the order</inlineHelpText>
    <label>Allow Header Discount</label>
    <type>Checkbox</type>
</CustomField>