force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Allowed_Orderer_Types__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allowed_Orderer_Types__c</fullName>
    <description>Allowed Orderer Types</description>
    <label>Allowed Orderer Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>