force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Barcode_Scan_Behavior__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Barcode_Scan_Behavior__c</fullName>
    <description>Controls the behavior of barcode scanning of products: Select item and increase quantity.</description>
    <label>Barcode Scan Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OnlySelect</fullName>
            </value>
            <value>
                <fullName>SelectIncrease</fullName>
                <default>true</default>
                <label>SelectIncrease</label>
            </value>
            <value>
                <fullName>AddBatchNumber</fullName>
            </value>
            <value>
                <fullName>UserExit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>