force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Calculation_Schema__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Schema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to calculation schema for determining calculation schema used in truck load documents</description>
    <label>Calculation Schema</label>
    <referenceTo>cgcloud__CP_Calculation_Schema__c</referenceTo>
    <relationshipLabel>Order Templates</relationshipLabel>
    <relationshipName>Order_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>