force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cancel_Reason__c</fullName>
    <description>Reasons for cancelation</description>
    <label>Cancel Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CashierNotAvailable</fullName>
            </value>
            <value>
                <fullName>CustomerBlocked</fullName>
            </value>
            <value>
                <fullName>DoubleDelivery</fullName>
            </value>
            <value>
                <fullName>Misentry</fullName>
            </value>
            <value>
                <fullName>NotEnoughMoney</fullName>
            </value>
            <value>
                <fullName>WrongDelivery</fullName>
            </value>
            <value>
                <fullName>WrongPricing</fullName>
            </value>
            <value>
                <fullName>CanceledByCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>