force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Cancel_Reason_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cancel_Reason_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to denote that cancel reasons are required.</description>
    <label>Cancel Reason Required</label>
    <type>Checkbox</type>
</CustomField>