force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Capture_Release_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Capture_Release_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture Release Time.</description>
    <label>Capture Release Time</label>
    <type>Checkbox</type>
</CustomField>