force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls, if the delivery date must be checked.</description>
    <label>Check</label>
    <type>Checkbox</type>
</CustomField>