force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Check_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Out_Type__c</fullName>
    <description>The check-out type that’s applied in the product check-out document.</description>
    <label>Check-Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express Check-Out</fullName>
            </value>
            <value>
                <fullName>Pallet Check-Out</fullName>
            </value>
            <value>
                <fullName>Counting Group Check-Out</fullName>
            </value>
            <value>
                <fullName>SKU Check-Out</fullName>
                <default>true</default>
                <label>SKU Check-Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>