force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Compute_Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Compute_Price__c</fullName>
    <description>Controls if prices are computed for the items.</description>
    <label>Compute Price</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>