force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Field_Availability__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Field_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The template setting controls whether the field state has to be considered when adding a product to the disposal list.</description>
    <label>Consider Field Availability</label>
    <type>Checkbox</type>
</CustomField>