force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_History_In_Days__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_History_In_Days__c</fullName>
    <description>Controls how many days should be used to determine a last item.</description>
    <label>Consider History In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>