force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Inventory__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Inventory</label>
    <type>Checkbox</type>
</CustomField>