force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Lead_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is set, the lead time is taken from the delivery recipient. Otherwise the lead time of this template is taken. The maximum lead time is defined in both cases by the template.</description>
    <label>Consider Lead Time</label>
    <type>Checkbox</type>
</CustomField>