force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Listing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Listing__c</fullName>
    <description>All products of active listings are considered according to the specified listing finding template.</description>
    <label>Consider Listing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>