force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Modification_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether modification reasons can be entered for modified items.</description>
    <inlineHelpText>Attribute at present not used.</inlineHelpText>
    <label>Consider Modification Reason</label>
    <type>Checkbox</type>
</CustomField>