force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_OoS__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_OoS__c</fullName>
    <description>To the disposal list, the system adds out of stock products and/or presets their quantity.</description>
    <label>Consider OoS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Preset</fullName>
            </value>
            <value>
                <fullName>AddPreset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>