force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Quantity_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Quantity_Suggestion__c</fullName>
    <description>Specifies presetting of ordered quantity via calculated quantity suggestion or pre ordered quantity.</description>
    <label>Consider Quantity Suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lqty</fullName>
            </value>
            <value>
                <fullName>Pqty</fullName>
            </value>
            <value>
                <fullName>LQtyStock</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>