force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Saturday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If &apos;1&apos; (True): delivery at Saturdays are allowed.</description>
    <label>Consider Saturday</label>
    <type>Checkbox</type>
</CustomField>