force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Selectable_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Selectable_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This attribute is used to enable selectable promotions on mobility</description>
    <label>Consider Selectable Promotion</label>
    <type>Checkbox</type>
</CustomField>