force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Stock__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the current stock must be considered for quantity suggestion in the web display of the disposal list.(At present additionally used for displaying current stock in the disposal list of the mobility device.)</description>
    <label>Consider Stock</label>
    <type>Checkbox</type>
</CustomField>