force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Consider_Sunday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If &apos;1&apos; (True): delivery at Sundays are allowed.</description>
    <label>Consider Sunday</label>
    <type>Checkbox</type>
</CustomField>