force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Customer_Selling_Assortment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Selling_Assortment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether the customer selling assortment is used for presetting the disposal list.
    - 0/No: The system doesn&apos;t consider any customer selling assortment.
    - 1/Yes: The system filters the disposal list subject to the customer selling assortment. All other template attributes for the disposal list control have to be considered also.</description>
    <label>Customer Selling Assortment</label>
    <type>Checkbox</type>
</CustomField>