force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Deletion_Allowed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Deletion_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if it is allowed to delete any object of that template at all.</description>
    <label>Deletion Allowed</label>
    <type>Checkbox</type>
</CustomField>