force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Delivery_Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Date_Calculation__c</fullName>
    <description>Controls, how the delivery date is determined.</description>
    <label>Delivery Date Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Built In</fullName>
                <default>true</default>
                <label>Built In</label>
            </value>
            <value>
                <fullName>User Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>