force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Disposal_List_Proposal__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Disposal_List_Proposal__c</fullName>
    <description>Controls, whether and how the disposal list is build for this sales document template.</description>
    <label>Disposal List Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <default>true</default>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>Talon</fullName>
            </value>
            <value>
                <fullName>UserExit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>