force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Document_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Document_Transaction_Type__c</fullName>
    <description>Specifies how to handle a sales document regarding payments.</description>
    <label>Document Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Document_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CashInvoice</fullName>
            </value>
            <value>
                <fullName>CreditInvoice</fullName>
            </value>
            <value>
                <fullName>ValuatedDeliveryNote</fullName>
            </value>
            <value>
                <fullName>NonValuatedDeliveryNote</fullName>
            </value>
            <value>
                <fullName>CashOrder</fullName>
            </value>
            <value>
                <fullName>CreditOrder</fullName>
            </value>
            <value>
                <fullName>NoPaymentOrder</fullName>
            </value>
            <value>
                <fullName>InvoiceCashInvoice</fullName>
            </value>
            <value>
                <fullName>InvoiceCreditInvoice</fullName>
            </value>
            <value>
                <fullName>NoPayment</fullName>
            </value>
            <value>
                <fullName>CreditMemo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>