force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Document_Type__c</fullName>
    <description>Specifies how to handle a sales document regarding payments.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CashCheckIn</fullName>
            </value>
            <value>
                <fullName>CashCheckOut</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>OrderEntry</fullName>
            </value>
            <value>
                <fullName>ProductCheckIn</fullName>
            </value>
            <value>
                <fullName>ProductCheckOut</fullName>
            </value>
            <value>
                <fullName>TruckAudit</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>