force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Flat_Item_List_Grouping__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Flat_Item_List_Grouping__c</fullName>
    <description>When displaying the disposal list as flat list on the mobility device, the items will be grouped in accordance with the product groups of the specified level.</description>
    <label>Flat Item List Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>