force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Generate_Pricing_Information__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Generate_Pricing_Information__c</fullName>
    <description>This attribute is used to control the storage of pricing information in respective order item/order object. In turn to be displayed during printing or print preview.</description>
    <label>Generate Pricing Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>YesOV</fullName>
                <label>Yes (Optimised Version)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>