force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Generate_Pricing_Log__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Generate_Pricing_Log__c</fullName>
    <description>Provides a possibility to control if the pricing engine will write/synchronize pricing logs.</description>
    <label>Generate Pricing Log</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>