force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Generate_Rewards_Log__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Generate_Rewards_Log__c</fullName>
    <description>This attribute can be used by user to switch on/off the generation of Rewards log file when order is saved.</description>
    <label>Generate Rewards Log</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>