force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Hide_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Hide_Wholesaler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether the attribute Broker/Wholesaler is hidden in the U I.</description>
    <label>Hide Wholesaler</label>
    <type>Checkbox</type>
</CustomField>