force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Id_Generation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Id_Generation__c</fullName>
    <description>Controls the behavior of the document number generation</description>
    <label>Id Generation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>