force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Inventory_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Reference_1__c</fullName>
    <description>Defines the first inventory reference usage.</description>
    <label>Inventory Reference 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DefaultUser</fullName>
            </value>
            <value>
                <fullName>ActualUser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>