force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Inventory_Reference_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Reference_2__c</fullName>
    <description>Defines the second inventory reference usage.</description>
    <label>Inventory Reference 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DefaultUser</fullName>
            </value>
            <value>
                <fullName>ActualUser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>