force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Inventory_Reference_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Reference_3__c</fullName>
    <description>Defines the third inventory reference usage.</description>
    <label>Inventory Reference 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DefaultUser</fullName>
            </value>
            <value>
                <fullName>ActualUser</fullName>
            </value>
            <value>
                <fullName>ActualVehicle</fullName>
                <isActive>false</isActive>
                <label>ActualVehicle</label>
            </value>
            <value>
                <fullName>DefaultVehicle</fullName>
                <isActive>false</isActive>
                <label>DefaultVehicle</label>
            </value>
            <value>
                <fullName>Tour</fullName>
                <isActive>false</isActive>
                <label>Tour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>