force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Item_Input_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Item_Input_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All items of the sales document must have been edited (entered quantity) before releasing the document.</description>
    <label>Item Input Required</label>
    <type>Checkbox</type>
</CustomField>