force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Item_Presetting_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Item_Presetting_Policy__c</fullName>
    <description>Specifies whether the system shows the presetting of item values in the truck load and cash documents.</description>
    <label>Item Presetting Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BlindMode</fullName>
            </value>
            <value>
                <fullName>NonBlindMode</fullName>
            </value>
            <value>
                <fullName>Prepopulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>