force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__List_Option__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__List_Option__c</fullName>
    <description>Specifies the default list option in the sales document</description>
    <label>List Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Flat List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>