force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Listing_Finding__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Listing_Finding__c</fullName>
    <description>Reference to the authorization list finding template, which controls the behaviour of the algorithm.</description>
    <label>Listing Finding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>