force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Adjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls, if the delivery date can be edited by the user or not.</description>
    <label>Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>